# 114-2-Programming-Language

./: HW1_日常支出速算與分攤.ipynb  HW1_日常支出速算與分攤_Gradio.ipynb  HW2_成績一本通.ipynb  HW2_成績一本通_gradio.ipynb  HW3_待辦清單與番茄鐘紀錄.ipynb  README.md
HW4_RAG/: .gitignore  README.md  ask.py  index_repo.py  pyproject.toml  web_api.py
HW4_RAG/codebase_rag/: __init__.py  api.py  chunker.py  config.py  embeddings.py  indexer.py  language.py  llm.py  manifest.py  prompt.py  repository.py  retriever.py  scanner.py  sparse_index.py  symbols.py  types.py  vectorstore.py
HW4_RAG/frontend/: package-lock.json
HW4_RAG/frontend/src/: App.css  App.tsx  index.css
HW4_RAG/sample_project/src/api/: auth.ts
HW4_RAG/sample_project/src/auth/: login.ts
HW4_RAG/sample_project/src/db/: connection.py
HW4_RAG/tests/: helpers.py  test_api.py  test_ask.py  test_chunker.py  test_cli.py  test_config.py  test_embeddings.py  test_indexer.py  test_manifest.py  test_repository.py  test_scanner.py  test_sparse_index.py  test_symbols.py  test_vectorstore.py
