[project]
name = "hw4-rag"
version = "0.1.0"
description = "CLI-first codebase RAG assignment project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.12",
    "fastapi>=0.136.3",
    "pathspec>=0.12.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "sentence-transformers>=4.1.0",
    "uvicorn>=0.48.0",
]

[project.optional-dependencies]
ui = [
    "gradio>=5.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["codebase_rag"]
